<resources>
    <string name="app_name">MyCheckIns</string>
    <string name="check_title_hint">Enter a title for the check in.</string>
    <string name="check_title_label">Title</string>
    <string name="checkin_details_label">Details</string>
    <string name="checkin_place_label">Place</string>
    <string name="details_label">Details of the check in</string>
    <string name="place_label">Place of the check in</string>
    <string name="date_picker_title">Date of check in:</string>
    <string name="new_checkin">New Check in</string>
    <string name="help">Help</string>
    <string name="check_share_text">Send Check in</string>
    <string name="check_share">%1$s! The check in was recorded on %2$s. %3$s, </string>
    <string name="send_report">Send check in via</string>
    <string name="title_activity_maps">Map</string>
</resources>
