<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/check_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray" />
            <ImageButton
                android:id="@+id/check_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_title_label" />
            <EditText
                android:id="@+id/check_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/check_title_hint"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_details_label"/>
    <EditText
        android:id="@+id/check_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details_label"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkin_place_label"/>
    <EditText
        android:id="@+id/check_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place_label"/>
    <Button
        android:id="@+id/check_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/check_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/show_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Map" />
    </LinearLayout>

    <Button
        android:id="@+id/check_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete CheckIn" />

    <Button
        android:id="@+id/check_share"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Share CheckIn"/>





</LinearLayout>